fix(ui): increase tree menu width and spacing

--- a/assets/sass/colorscheme.scss
+++ b/assets/sass/colorscheme.scss
@@ -95,7 +95,7 @@ $acc-height: 48px;
 
 // Menu
 $orga-menu-width: 64px;
-$tree-menu-width: 235px;
+$tree-menu-width: 260px;
 
 
 :root {
